# test_blog

./: README.md  pyproject.toml
mvp_blog/: manage.py
mvp_blog/blog/: models.py
mvp_blog/blog/migrations/: 0001_initial.py  0002_alter_post_managers.py  0003_alter_user_managers.py
mvp_blog/core_settings/: base_settings.py  urls.py  wsgi.py
mvp_blog/testing/: test_blog.py
